# trovo-chatbot

./: .env.example  .gitignore  Cargo.toml  settings.json.example
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/api/: client.rs  errors.rs  mod.rs  structs.rs
src/api/chat/: errors.rs  mod.rs  stream.rs  structs.rs
src/api/stream/: errors.rs  stream.rs  structs.rs
src/auth/: auth.rs  db.rs  mod.rs  server.rs  structs.rs
src/utils/: config.rs  db.rs  utils.rs
