[package]
name = "trovo-chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envfile = "0.2.1"
envy = "0.4.2"
http = "0.2.6"
httparse = "1.6.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.0", features = ["json"] }
portpicker = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
unqlite = "1.5.0"
